student alignment fixed

--- a/src/Pages/CSS/Students.css
+++ b/src/Pages/CSS/Students.css
@@ -4,7 +4,7 @@
 }
 .students h1{
     margin-top: 30px;
-    padding-left: 490px;
+    padding-left: 550px;
     color: rgb(82, 82, 98);
 }
 .studentdiv-titles{
